<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:padding="@dimen/md_16dp"
    tools:context=".presenter.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagem_logo"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvUserPhoto"
            android:layout_width="@dimen/xl_64dp"
            android:layout_height="@dimen/xl_64dp"
            android:layout_marginTop="@dimen/xm_32dp"
            app:cardCornerRadius="@dimen/xm_32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:strokeColor="@color/zinc_700"
            app:strokeWidth="@dimen/xxs_2dp">

            <ImageView
                android:id="@+id/ivUserPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagem_foto_do_usuario"
                android:scaleType="centerCrop"
                tools:src="@drawable/img_this_person_does_not_exist" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lg_24dp"
            android:text="@string/ola_usuario"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/mcvUserPhoto"
            app:layout_constraintStart_toEndOf="@+id/mcvUserPhoto"
            app:layout_constraintTop_toTopOf="@+id/mcvUserPhoto" />

        <LinearLayout
            android:id="@+id/llNewPlannerActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xm_32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcvUserPhoto">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPlannerActivityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sm_8dp"
                app:startIconDrawable="@drawable/ic_tag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNewPlannerActivityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qual_a_atividade"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPlannerActivityDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sm_8dp"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNewPlannerActivityDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/escolha_a_data" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPlannerActivityTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_clock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNewPlannerActivityTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/escolha_o_horario" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveNewPlannerActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_16dp"
            android:text="@string/salvar_atividade"
            android:textColor="@color/lime_950"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNewPlannerActivity" />

        <TextView
            android:id="@+id/textView"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_24dp"
            android:text="@string/atividades"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSaveNewPlannerActivity" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlannerActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:itemCount="8"
            tools:listitem="@layout/item_planner_activity" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>