<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/zinc_800"
    android:padding="@dimen/md_16dp"
    tools:context=".presenter.bottom_sheet.UpadatePlannerActivityDialogFragment">

    <TextView
        android:id="@+id/tvSignupTitle"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md_16dp"
        android:text="@string/alterar_atividade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llUpdatedPlannerActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxm_40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm_8dp"
            app:boxBackgroundColor="@color/zinc_950"
            app:startIconDrawable="@drawable/ic_tag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                tools:text="Jantar" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm_8dp"
            app:boxBackgroundColor="@color/zinc_950"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="21 de janeiro" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm_8dp"
            app:boxBackgroundColor="@color/zinc_950"
            app:startIconDrawable="@drawable/ic_clock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="08:30" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/zinc_500"
            android:background="@android:color/transparent"
            android:text="@string/botao_de_exclusao_de_atividade" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdatePlannerActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xm_32dp"
        android:text="@string/salvar_usuario"
        android:textColor="@color/lime_950"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llUpdatedPlannerActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>